added game page

--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
 						</div>
 						<div class="flex gap-1 flex-wrap justify-between">
 							<div class="w-40 h-[16rem] bg-secondaryGray rounded-md">
-								<a href="">
+								<a href="./mobile-legend.html">
 									<div
 										class="w-full h-[13rem] bg-secondaryBlue overflow-hidden rounded-t-md"
 									>
