added menu in gamepage

--- a/public/mobile-legend.html
+++ b/public/mobile-legend.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<!-- Header -->
-		<header class="bg-primary py-4 -z-10">
+		<header class="bg-primary py-2 -z-10">
 			<div class="container">
 				<div class="flex justify-between items-center">
 					<h1 class="font-bold text-text text-2xl">
@@ -72,7 +72,7 @@
 						Masukan user id
 					</h3>
 				</div>
-				<div class="bg-text shadow-lg py-8">
+				<div class="bg-text shadow-sm py-8 rounded-b-md">
 					<form class="flex overflow-hidden px-4 gap-2 justify-center">
 						<input
 							oninput="this.value = this.value.replace(/[^0-9]/g, '')"
@@ -89,8 +89,8 @@
 							class="text-center font-semibold w-[6rem] py-2 text-xs border border-primary rounded-md"
 						/>
 					</form>
-					<div class="px-4 pt-4">
-						<p class="text-[10px] italic">
+					<div class="px-3 pt-4">
+						<p class="text-xs italic text-justify leading-4 opacity-80">
 							Untuk mengetahui User ID Anda, silakan klik menu profile dibagian
 							kiri atas pada menu utama game. User ID akan terlihat dibagian
 							bawah Nama Karakter Game Anda. Silakan masukkan User ID Anda untuk
@@ -100,7 +100,198 @@
 				</div>
 			</div>
 		</section>
+		<section class="w-full bg-backgroundColor py-4">
+			<div class="container">
+				<div class="relative">
+					<h1
+						class="absolute left-2 font-bold text-text border-2 border-text flex justify-center items-center text-center top-6 bg-secondaryBlue w-[2rem] h-[2rem] rounded-full"
+					>
+						02
+					</h1>
+					<h3
+						class="bg-primary text-text text-center font-semibold py-2 rounded-t-md"
+					>
+						Pilih Nominal Top Up
+					</h3>
+				</div>
+				<div class="bg-text shadow-sm py-8 rounded-b-md">
+					<div class="flex justify-center items-center flex-wrap w-full gap-2">
+						<div
+							class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md"
+							id="button"
+						>
+							<div
+								class="w-full h-full flex justify-center items-center flex-col"
+							>
+								<img
+									src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+									alt=""
+									width="50"
+								/>
+								<h2 class="text-center font-bold text-xs">330 Diamonds</h2>
+								<h3
+									class="text-center font-semibold text-secondaryBlue text-xs"
+								>
+									Rp. 39.000
+								</h3>
+							</div>
+						</div>
+						<div
+							class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md"
+							id="button"
+						>
+							<div
+								class="w-full h-full flex justify-center items-center flex-col"
+							>
+								<img
+									src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+									alt=""
+									width="50"
+								/>
+								<h2 class="text-center font-bold text-xs">330 Diamonds</h2>
+								<h3
+									class="text-center font-semibold text-secondaryBlue text-xs"
+								>
+									Rp. 39.000
+								</h3>
+							</div>
+						</div>
+						<div
+							class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md"
+							id="button"
+						>
+							<div
+								class="w-full h-full flex justify-center items-center flex-col"
+							>
+								<img
+									src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+									alt=""
+									width="50"
+								/>
+								<h2 class="text-center font-bold text-xs">330 Diamonds</h2>
+								<h3
+									class="text-center font-semibold text-secondaryBlue text-xs"
+								>
+									Rp. 39.000
+								</h3>
+							</div>
+						</div>
+						<div
+							class="w-32 h-40 bg-backgroundColor border-2 border-primary rounded-md"
+							id="button"
+						>
+							<div
+								class="w-full h-full flex justify-center items-center flex-col"
+							>
+								<img
+									src="https://cdn1.codashop.com/S/content/common/images/denom-image/MLBB/100x100/50ormore_MLBB_Diamonds.png"
+									alt=""
+									width="50"
+								/>
+								<h2 class="text-center font-bold text-xs">330 Diamonds</h2>
+								<h3
+									class="text-center font-semibold text-secondaryBlue text-xs"
+								>
+									Rp. 39.000
+								</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="w-full bg-backgroundColor py-4">
+			<div class="container">
+				<div class="relative">
+					<h1
+						class="absolute left-2 font-bold text-text border-2 border-text flex justify-center items-center text-center top-6 bg-secondaryBlue w-[2rem] h-[2rem] rounded-full"
+					>
+						04
+					</h1>
+					<h3
+						class="bg-primary text-text text-center font-semibold py-2 rounded-t-md"
+					>
+						Konfirmasi Pembelian
+					</h3>
+				</div>
+				<div class="bg-text shadow-sm py-8 rounded-b-md">
+					<form
+						class="flex overflow-hidden px-4 gap-2 justify-between items-center"
+					>
+						<label
+							for="nowa"
+							class="font-bold text-sm text-secondaryDark opacity-80 whitespace-nowrap"
+							>Masukan No wa</label
+						>
+						<input
+							id="nowa"
+							oninput="this.value = this.value.replace(/[^0-9]/g, '')"
+							maxlength="10"
+							type="text"
+							placeholder="Masukan User id"
+							class="text-center font-semibold w-[12rem] py-2 text-xs border border-primary rounded-md"
+						/>
+					</form>
+					<div class="flex px-4 justify-between pt-4">
+						<h1
+							class="font-bold text-sm text-secondaryDark opacity-80 whitespace-nowrap"
+						>
+							Total Tagihan
+						</h1>
+						<h1
+							class="font-bold text-sm text-secondaryBlue opacity-80 whitespace-nowrap"
+						>
+							Rp. 79.000
+						</h1>
+					</div>
+					<div class="px-3 pt-4">
+						<button
+							class="bg-secondaryBlue px-32 py-2 rounded-md font-bold text-white hover:bg-primary"
+						>
+							Konfirmasi
+						</button>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Footer -->
+		<section class="w-full bg-secondaryBlue pt-4 pb-8">
+			<div class="container">
+				<div class="text-text text-center pt-8">
+					<h1 class="text-3xl font-bold text-center text-text">
+						Mizu<span class="text-secondaryYellow">store</span> Indonesia
+					</h1>
+					<h2 class="font-semibold">
+						Mizustore: Website top-up terbesar, tercepat dan terpercaya di
+						indonesia
+					</h2>
+					<p class="pt-4">
+						Website top up game ini dibuat hanya untuk keperluan tugas kuliah
+						dan bukan untuk tujuan komersial. Segala transaksi dan uang virtual
+						yang digunakan hanya bersifat simulasi dan tidak ada hubungannya
+						dengan uang nyata. Segala kemiripan dengan website atau layanan yang
+						sebenarnya tidak disengaja. Ehe te nandayooo!?
+					</p>
+				</div>
+			</div>
+		</section>
+		<!-- End Footer -->
 
 		<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+		<script>
+			var buttons = document.querySelectorAll("#button");
+			buttons.forEach(function (button) {
+				button.addEventListener("click", function () {
+					buttons.forEach(function (btn) {
+						btn.classList.remove("border-secondaryBlue");
+						btn.classList.add("border-primary");
+					});
+
+					this.classList.remove("border-primary");
+					this.classList.add("border-secondaryBlue");
+				});
+			});
+		</script>
 	</body>
 </html>
