--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 			href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<!-- Header -->
@@ -399,6 +403,148 @@
 		</section>
 		<!-- End Section About Mizustore -->
 
+		<!-- Accordion Section -->
+		<section class="w-full bg-backgroundColor pt-4 pb-8">
+			<div class="container">
+				<div>
+					<div id="accordion-collapse" data-accordion="collapse">
+						<h2 id="accordion-collapse-heading-1">
+							<button
+								type="button"
+								class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-b-0 border-gray-200 rounded-t-md focus:ring-1 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
+								data-accordion-target="#accordion-collapse-body-1"
+								aria-expanded="true"
+								aria-controls="accordion-collapse-body-1"
+							>
+								<span class="font-bold text-md">Tau Gak?</span>
+								<svg
+									data-accordion-icon
+									class="w-6 h-6 rotate-180 shrink-0"
+									fill="currentColor"
+									viewBox="0 0 20 20"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										fill-rule="evenodd"
+										d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+										clip-rule="evenodd"
+									></path>
+								</svg>
+							</button>
+						</h2>
+						<div
+							id="accordion-collapse-body-1"
+							class="hidden mb-4"
+							aria-labelledby="accordion-collapse-heading-1"
+						>
+							<div class="p-5 border border-b-1 border-gray-200">
+								<p class="mb-2 text-gray-500 dark:text-gray-400">Gak Tau</p>
+							</div>
+						</div>
+						<h2 id="accordion-collapse-heading-2">
+							<button
+								type="button"
+								class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
+								data-accordion-target="#accordion-collapse-body-2"
+								aria-expanded="false"
+								aria-controls="accordion-collapse-body-2"
+							>
+								<span class="font-bold text-md">Apakah Mizustore aman?</span>
+								<svg
+									data-accordion-icon
+									class="w-6 h-6 shrink-0"
+									fill="currentColor"
+									viewBox="0 0 20 20"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										fill-rule="evenodd"
+										d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+										clip-rule="evenodd"
+									></path>
+								</svg>
+							</button>
+						</h2>
+						<div
+							id="accordion-collapse-body-2"
+							class="hidden mb-4"
+							aria-labelledby="accordion-collapse-heading-2"
+						>
+							<div
+								class="p-5 border border-b-1 border-gray-200 dark:border-gray-700"
+							>
+								<p class="mb-2 text-gray-500 dark:text-gray-400">Kurang Tau</p>
+							</div>
+						</div>
+						<h2 id="accordion-collapse-heading-3">
+							<button
+								type="button"
+								class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
+								data-accordion-target="#accordion-collapse-body-3"
+								aria-expanded="false"
+								aria-controls="accordion-collapse-body-3"
+							>
+								<span class="font-bold text-md">Apakah Mizustore aman?</span>
+								<svg
+									data-accordion-icon
+									class="w-6 h-6 shrink-0"
+									fill="currentColor"
+									viewBox="0 0 20 20"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<path
+										fill-rule="evenodd"
+										d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+										clip-rule="evenodd"
+									></path>
+								</svg>
+							</button>
+						</h2>
+						<div
+							id="accordion-collapse-body-3"
+							class="hidden"
+							aria-labelledby="accordion-collapse-heading-3"
+						>
+							<div
+								class="p-5 border border-t-0 border-gray-200 dark:border-gray-700"
+							>
+								<p class="mb-2 text-gray-500 dark:text-gray-400">
+									Kurang Tau Juga
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- End Accordion -->
+
+		<!-- Section -->
+		<footer class="bg-backgroundFooter w-full pt-4 pb-8">
+			<div class="container">
+				<div>
+					<a href="#" class="text-text flex justify-center text-xs pb-2"
+						>&#169; Hak Cipta Mizu Payments
+					</a>
+					<ul
+						class="list-disc text-text text-xs flex gap-4 justify-center flex-wrap"
+					>
+						<li><a href="#">Pemasaran dan Kemitraan</a></li>
+						<li><a href="#">Untuk Penerbit Game</a></li>
+					</ul>
+					<ul
+						class="list-disc text-text text-xs flex gap-4 justify-center flex-wrap"
+					>
+						<li><a href="#">Syarat & Ketentuan</a></li>
+						<li><a href="#">Kebijakan Privasi</a></li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+
+		<!-- End Footer -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 		<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 	</body>
 </html>
