--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,6 @@
 			href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
 			rel="stylesheet"
 		/>
-		<link
-			href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
-			rel="stylesheet"
-		/>
 	</head>
 	<body>
 		<!-- Header -->
@@ -42,7 +38,7 @@
 
 		<!-- Search Section -->
 		<section
-			class="w-full bg-backgroundColor z-10 -mt-4 rounded-t-md pb-8 md:hidden"
+			class="w-full bg-backgroundColor z-10 -mt-4 rounded-t-md md:pb-8 md:hidden"
 		>
 			<div class="container">
 				<div class="bug">
@@ -52,7 +48,7 @@
 						<input
 							type="text"
 							placeholder="Cari game kesukaanmu..."
-							class="flex-1 outline-none bg-backgroundColor font-bold text-primary"
+							class="outline-none bg-transparent flex-1 font-bold text-primary"
 							id="search"
 						/>
 					</div>
@@ -417,7 +413,7 @@
 						<h2 id="accordion-collapse-heading-1">
 							<button
 								type="button"
-								class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-b-0 border-gray-200 rounded-t-md focus:ring-1 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
+								class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-b-0 border-gray-200 rounded-t-md focus:ring-1 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400"
 								data-accordion-target="#accordion-collapse-body-1"
 								aria-expanded="true"
 								aria-controls="accordion-collapse-body-1"
@@ -450,7 +446,7 @@
 						<h2 id="accordion-collapse-heading-2">
 							<button
 								type="button"
-								class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
+								class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400"
 								data-accordion-target="#accordion-collapse-body-2"
 								aria-expanded="false"
 								aria-controls="accordion-collapse-body-2"
