--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="mobile-web-app-capable" content="yes" />
+
 		<link href="css/style.css" rel="stylesheet" />
 		<link
 			href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
