--- a/public/mobile-legend.html
+++ b/public/mobile-legend.html
@@ -37,7 +37,7 @@
 				<section class="w-full bg-backgroundColor pb-4">
 					<div class="lg:px-[16px]">
 						<section class="w-full h-[15rem]">
-							<div class="w-[30rem] h-[16rem] overflow-hidden">
+							<div class="w-full h-[16rem] overflow-hidden">
 								<img
 									src="../img/luoyi.jpg"
 									alt=""
